--- a/tictactoe/src/App.css
+++ b/tictactoe/src/App.css
@@ -1,1 +1,8 @@
 @import "tailwindcss"
+/* @tailwind components; */
+
+/* @layer components {
+    .btn {
+        @apply bg-blue-500 text-white py-2 px-4 rounded;
+    }
+} */
